created jwt token including userrole , username userid etc